# ProjectSoftwareEngineering

./: .gitignore  CMakeLists.txt  README.md  Summary.metro  Summary2.metro  events.metro  logger.txt  newVoorbeeld.xml  voorbeeld.xml
gtest/include/gtest/: gtest-message.h  gtest.h
gtest/include/gtest/internal/: gtest-linked_ptr.h
input/: oldVoorbeeld.xml  voorbeeld.xml  voorbeeldGewoon.xml  voorbeeldHeenEnWeer.xml  voorbeeldMetTracks.xml  voorbeeldMetTracks2.xml  voorbeeldSimpel.xml
output/: Summary.metro  events.metro
src/: MetroNet.cpp  MetroNet.h  Station.cpp  Station.h  Track.cpp  Track.h  TrackNode.cpp  TrackNode.h  Tram.cpp  Tram.h  constants.cpp  constants.h  library.h  main.cpp  metroNet  metroNet_debug  metroUtils.cpp  metroUtils.h  simulationUtils.cpp  simulationUtils.h  utils.cpp  utils.h
src/libs/xmlparser/: tinyxml.h
src/lines/: Line.cpp  Line.h  LineNode.cpp  LineNode.h
src/platform/: Platform.cpp  Platform.h
src/signals/: Signal.cpp  Signal.h  SpeedSignal.cpp  SpeedSignal.h  StopSignal.cpp  StopSignal.h
src/stations/: MetroStation.cpp  MetroStation.h  Platform.cpp  Platform.h  Station.cpp  Station.h  TramStop.cpp  TramStop.h
src/statistics/: Statistics.cpp  Statistics.h
src/tests/: DesignByContract.h  Input_test1.xml  SummaryTest.metro  inputTest.cpp  input_test0.xml  input_test10.xml  input_test11.xml  input_test12.xml  input_test13.xml  input_test14.xml  input_test15.xml  input_test18.xml  input_test2.xml  input_test3.xml  input_test4.xml  input_test5.xml  input_test6.xml  input_test7.xml  input_test8.xml  input_test9.xml  outputTest.cpp  voorbeeldTest.xml  voorbeeldTestFalse.xml  voorbeeldTestFalse1.xml  voorbeeldTestFalse2.xml  voorbeeldTestFalse4.xml  voorbeeldTestPositive.xml
src/tests/expected_outputs/: SummaryTestExample.metro  eventsTestExample.metro  graphicalLinesExample.metro  output_test_110secs.metro  output_test_15secs.metro  output_test_30secs.metro  output_test_5secs.metro
src/tests/test_outputs/: SummaryTest.metro  graphicalLines_test1.metro
src/time/: SimulationTime.cpp  SimulationTime.h  Timer.cpp  Timer.h
src/timer/: Timer.cpp  Timer.h
src/trams/: Albatros.cpp  Albatros.h  PCC.cpp  PCC.h  Tram.cpp  Tram.h
src/utils/: Direction.cpp  Direction.h  FileHandler.cpp  FileHandler.h  constants.cpp  constants.h  enums.cpp  enums.h  exceptions.cpp  exceptions.h  metroParser.cpp  metroParser.h  metroUtils.cpp  metroUtils.h  metro_parser.cpp  metro_parser.h  metro_utils.cpp  metro_utils.h  simulationUtils.cpp  simulationUtils.h  simulation_utils.cpp  simulation_utils.h
